[package]
description = "CosmWasm integration testing for Neutron"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "neutron-test-tube"
repository = "https://github.com/neutron-org/test-tube"
version = "19.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = ["neutron", "test_artifacts"]

[dependencies]
base64 = "0.13.0"
cosmrs = { version = "0.9.0", features = ["cosmwasm"] }
cosmwasm-std = "1.4.0"
prost = "0.11.0"
serde = "1.0.144"
serde_json = "1.0.85"
test-tube = { version = "0.1.7", features = ["module-wrappers"] }
thiserror = "1.0.34"

[build-dependencies]
bindgen = "0.60.1"

[dev-dependencies]
cw1-whitelist = "0.15.0"
rayon = "1.5.3"
